--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>
     <main>
       <h1>Index</h1>
-      <p>Sven Co-op AngelScript API documentation.</p>
+      <p>Sven Co-op 5.26 AngelScript API documentation</p>
       <h2>Contents</h2>
       <ul>
       	<li><a href='/Classes'>Classes</a></li>
